@@ -1,0 +1,3 @@
+DELETE FROM `spell_script_names` WHERE `spell_id`=-1064;
+INSERT INTO `spell_script_names` VALUES
+(-1064, 'spell_sha_chain_heal');
