@@ -1,0 +1,1 @@
+DELETE FROM `spell_proc_event` WHERE `entry` IN (51486,51485,51483);
